--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ requests==2.18.4
 requests-unixsocket==0.1.5
 SecretStorage==2.3.1
 simplejson==3.13.2
-ssh-import-id==5.7
+six==1.11.0
 system-service==0.3
 systemd-python==234
 ubuntu-advantage-tools==27.8
