--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==2.0.3
 ipython==8.4.0
 matplotlib==3.2.2
 numpy==1.19.5
+nvidia-pyindex==1.0.9
 onnx==1.12.0
 onnxruntime==1.11.1
 opencv_python==4.6.0.66
